# learningNanoDjango

./: .gitignore  README.md  pyproject.toml
src/learningnanodjango/: counter.py  hello_async.py
src/learningnanodjango/hello_async_migrations/: 0001_initial.py
src/learningnanodjango/migrations/: 0001_initial.py
