[project]
authors = [{name = "tanner-ray-martin", email = "tanner.ray.martin.123@gmail.com"}]
dependencies = ["nanodjango>=0.9.2,<0.10"]
description = "Add a short description here"
name = "learningNanoDjango"
requires-python = ">= 3.13,<3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
learningnanodjango = { path = ".", editable = true }

[tool.pixi.tasks]
counter = 'nanodjango run src\learningnanodjango\counter.py 127.0.0.1:8000'
hello = 'nanodjango run src\learningnanodjango\hello_async.py 127.0.0.1:8000'
